--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -34,8 +34,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto";
   font-weight: 300;
+  background-color: var(--white);
 }
 
 form {
