--- a/client/src/components/pages/Leaderboard.css
+++ b/client/src/components/pages/Leaderboard.css
@@ -8,6 +8,8 @@ body {
 
 .container {
   padding: 20px;
+  margin-right:40px;
+  margin-left: 20px;
 }
 
 .header {
@@ -73,3 +75,36 @@ body {
 .leaderboard tr:nth-child(even) {
   background-color: #f9f9f3;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 4px;
+  flex-grow: 1;
+  flex-basis: 0;
+  text-align: center;
+}
+
+.dropdown-content button {
+  width: 100%;
+  padding: 12px 16px;
+  text-align: left;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.dropdown-content button:hover {
+  background-color: #f1f1f1;
+}
+
